[gd_scene load_steps=3 format=3 uid="uid://r4f7u8acdwbx"]

[ext_resource type="Script" path="res://Script/main_menu.gd" id="1_wkvmc"]
[ext_resource type="Texture2D" uid="uid://c3gswuejvs12n" path="res://assets/dark-gray-color-solid-background-1920x1080.png" id="2_3txjo"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wkvmc")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.517647, 0.470588, 0.941176, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_3txjo")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -32.0
offset_right = 51.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 5)
pivot_offset = Vector2(48, 33)

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "DELIVER GUY"

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit
"

[node name="VBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -252.0
offset_top = 36.0
offset_right = 252.0
offset_bottom = 99.0
grow_horizontal = 2

[node name="HighScoreText" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "HIGHEST SCORE:"

[node name="ScorePointText" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "SCORE"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
